--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 	</footer>
 
 	<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-	<script src="js/main.js">
-	
-	</script>
+	<script src="js/main.js"></script>
 
 </body>
 </html>
