--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="img/icon.png">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<!--[if lt IE 9]>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="js/respond.js"></script>
+	<![endif]-->
 </head>
 <body>
 
